--- a/templates/base.html
+++ b/templates/base.html
@@ -56,7 +56,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContents">
       <ul class="navbar-nav disp">
         <li class="nav-item dropdown drop-noti comment">
-          <a href="#" class="btn btn-clean notification-btn comment-btn">
+          <a href="{% url 'chatroombase' %}" class="btn btn-clean notification-btn comment-btn">
             <i class="fas fa-comment-alt bell-btn"></i>
           </a>
         </li>
